--- a/css/sidestyle.css
+++ b/css/sidestyle.css
@@ -1,4 +1,4 @@
 .intro {
-	background: url(../img/beach.jpg) no-repeat bottom center scroll;
+	background: url(../img/Black_Blue.jpg) no-repeat bottom center scroll;
    background-color: #000;
 }
